patching minor issues in algorithm execution

--- a/example_run.ipynb
+++ b/example_run.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Simulation takes a config which is represented as a dictionary of keys. nPrisoners, nTrials, and algorithms are mandatory. The optional arguments include schema and param (for alternative methods for the number of attempts prisoners get), lower (whether to raise or lower the number of attempts if it ends up being a float, as it's a fraction of the total number of envelopes), chunks (how many times progress is reported as the experiment runs), and nEnvelopes (the number of envelopes, which is at least the number of prisoners).\n",
     "sim = Simulation(config={'nPrisoners': 100,\n",
-    "              'nTrials': 10,\n",
+    "              'nTrials': 100,\n",
     "              'algorithms': (RandomSelect, LoopSelect),\n",
     "              'schema': 'default',\n",
     "              'lower': True,\n",
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "# We can access the data with .results. It's a little messy, so there's two other functions to get the info.\n",
+    "# We can access the data with .results. It's a little messy, so there's two other functions to get the info. Note that rows are prisoners and columns are trials.\n",
     "sim.results"
    ]
   },
